# FibBot

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: action.yml  ci.yml
src/: .get_pr.rs.swp  fib.rs  get_pr.rs  main.rs  parse_numbers.rs  post.rs
