[package]
name = "fib-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
chrono = { version = "*", features = ['serde'] }
octocrab = "0.43.0"
url ={ version = "*", features = ["serde"]}